tests/rgs/syntax_errors/named_story_missing_priority_number.rgs
STORY quest PRIORITY.
    ACTION run.
    EVENT spotted ENVIRONMENT.
    AGENT Hero:
        DURING ALWAYS:
            WHEN spotted ENVIRONMENT:
                DO run.
